Big Clean Up, versions bump up, LinkedList
Signed-off-by: janobono <janobono@gmail.com>